tdf#164878 sw inline heading: skip non-text content, i.e. formula

Formulae with style separator lost their centered position because
of the newly introduced Inline Heading frame around the object.
Limit Inline Heading frames only for paragraphs with text content.

Regression from commit 49765a9e7be41d4908729ff7d838755276b244cb
"tdf#48459 tdf#131728 sw inline heading: new frame style: fix DOCX export".

Change-Id: Ibabc0e045045f96dbbe8cfb31f9ce319189ee72a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182127
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit e5e7e5c6d06b7af19f4ff7c2d76ff87b1e8a288e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182171
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>